// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UntrustedDeviceDialog /> should display the dialog for the device of another user 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_UntrustedDeviceDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        <div
          class="mx_E2EIcon mx_E2EIcon_warning"
          style="width: 24px; height: 24px;"
        />
        Not Trusted
      </h1>
    </div>
    <div
      class="mx_Dialog_content"
      id="mx_Dialog_content"
    >
      <p>
        Alice (@alice:example.org) signed in to a new session without verifying it:
      </p>
      <p>
         (device_id)
      </p>
      <p>
        Ask this user to verify their session, or manually verify it below.
      </p>
    </div>
    <div
      class="mx_Dialog_buttons"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
        role="button"
        tabindex="0"
      >
        Interactively verify by emoji
      </div>
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        role="button"
        tabindex="0"
      >
        Done
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<UntrustedDeviceDialog /> should display the dialog for the device of the current user 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_UntrustedDeviceDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        <div
          class="mx_E2EIcon mx_E2EIcon_warning"
          style="width: 24px; height: 24px;"
        />
        Not Trusted
      </h1>
    </div>
    <div
      class="mx_Dialog_content"
      id="mx_Dialog_content"
    >
      <p>
        You signed in to a new session without verifying it:
      </p>
      <p>
         (device_id)
      </p>
      <p>
        Verify your other session using one of the options below.
      </p>
    </div>
    <div
      class="mx_Dialog_buttons"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
        role="button"
        tabindex="0"
      >
        Interactively verify by emoji
      </div>
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        role="button"
        tabindex="0"
      >
        Done
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
